--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-dom": "^16.9.8",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
+    "random-words": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-feather": "^2.0.9",
     "react-scripts": "4.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typescript": "^4.0.3",
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/random-words": "^1.1.0"
   }
 }
